--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
         <div class="about-main">
             <div class="row">
                <div class="col-lg-6">
-                  <h2>Oude Mollen Food Garden</h2>
-                  We worked with and collaborated with the Oude Molen Food Garden as part of our project.
-Kelly was the driving force behind the initiative eight years ago. She saw opportunity
- and potential in it. She believed that as individuals, we were capable of growing plants 
- naturally and becoming agriculturally self-sufficient.
+                  <h2>Sustainability Diversity Project</h2>
+                  We are an environmental initiative with the goal of making a positive difference in our 
+                  communities and adding value to the people who live there. As participants in this initiative, we all attempted to make a difference by 
+                  assisting local environmental entrepreneurs and teaching people how to live environmentally conscious lives.
                    <p></p>
                   <h5>Our goals</h5>
                   <ul>
@@ -249,15 +248,15 @@ Kelly was the driving force behind the initiative eight years ago. She saw oppor
              <ul class="footer_ul2_amrc">
                 <li>
                    <a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-                   <p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
+                   <p class="xlower">Find us on our Twitter page</p>
                 </li>
                 <li>
-                   <a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-                   <p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
+                   <a href="#"><i class="fab fa-facebook-f fleft padding-right xmargin"></i> </a>
+                   <p class="xlower">Find us on our Facebook page</p>
                 </li>
                 <li>
                    <a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-                   <p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
+                   <p class="xlower">Find us on our Instagram page</p>
                 </li>
              </ul>
              <!--footer_ul2_amrc ends here-->
