--- a/faq.html
+++ b/faq.html
@@ -47,7 +47,7 @@
     </nav>
 
 	<!-- full Title -->
-	<div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
+	<div class="full-title" style="background-image: url('images/blog-img-02.jpeg')">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">FAQ
@@ -71,13 +71,17 @@
 				<div class="card accordion-single">
 				  <div class="card-header" role="tab" id="headingOne">
 					<h5 class="mb-0">
-					  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">What services do the SDP provide</a>
+					  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">What services does the SDP provide</a>
 					</h5>
 				  </div>
 
 				  <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
 					<div class="card-body">
-					  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						We help social and environmental entrepreneurs succeed. For example,
+						 we helped Kelly by working on her garden, the Oude Molen Food Garden.
+						  We cleaned the garden, pulled weeds, made paths out of straws, and made decorations for her
+						   garden. The Oude Molen Food Garden is frequently visited and hosts events. We assisted them in the 
+						   planning and execution of their events and activities.
 					</div>
 				  </div>
 				</div>
@@ -89,7 +93,9 @@
 				  </div>
 				  <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
 					<div class="card-body">
-					  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						We want as many people as possible to attend our events and become interested in environmental issues. We believe that 
+						only by working together can crises like climate change and food scarcity be addressed. 
+						That is why we try to teach and promote healthier habits in our communities in the hopes of starting a long-term trend.
 					</div>
 				  </div>
 				</div>
@@ -101,7 +107,9 @@
 				  </div>
 				  <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
 					<div class="card-body">
-					  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						Anyone can help; even buying your vegetables from a local farmer makes a significant difference. Growing your own vegetables in
+						 your garden is another way to gain self-sufficiency.
+						 Teaching and talking to your friends about the advantages of living an environmentally conscious life is also a significant contribution.
 					</div>
 				  </div>
 				</div>
@@ -132,16 +140,16 @@
 					<ul class="footer_ul2_amrc">
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
-							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-							<p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
+							<p class="xlower">Find us on our Twitter page</p>
+						 </li>
+						 <li>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right xmargin"></i> </a>
+							<p class="xlower">Find us on our Facebook page</p>
+						 </li>
+						 <li>
 							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-							<p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
-						</li>
+							<p class="xlower">Find us on our Instagram page</p>
+						 </li>
 					</ul>
 					<!--footer_ul2_amrc ends here-->
 				</div>
