--- a/blog-post.html
+++ b/blog-post.html
@@ -46,7 +46,7 @@
       </div>
   </nav>
 	<!-- full Title -->
-  <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
+  <div class="full-title" style="background-image: url('images/blog-img-04.jpeg')">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">Blog
@@ -69,29 +69,22 @@
         <!-- Post Content Column -->
 			<div class="col-lg-8">
 
-				<!-- Preview Image -->
-				<img class="img-fluid rounded" src="images/First_Pic.jpeg" height="400" witdh="300">
-				<hr>
-					<!-- Date/Time -->
-					<p>Posted on January 1, 2018 at 18:00 PM</p>
-				<hr>
 				<!-- Post Content -->
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+				<p class="lead">Animal welfare and environmental issues</p>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+				<p>Sara E. Place, in Advances in Agricultural Animal Welfare, 2018</p>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+				<p>Environmental sustainability and animal welfare are often viewed as two important but separate issues. However, there is a nexus between these two issues. In the face of increasing global demand for animal protein and growing public scrutiny of animal agriculture from both an animal welfare and environmental sustainability perspective, research is needed to explore this nexus and develop creative “win-win” solutions. This chapter provides an overview of important environmental
+           sustainability issues related to animal agriculture, and provides examples of synergies and trade-offs between environmental sustainability and animal welfare.</p>
 
 				<blockquote class="blockquote">
-					<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-					<footer class="blockquote-footer">Someone famous in
-						<cite title="Source Title">Source Title</cite>
-					</footer>
+					<p class="mb-0">Application of nanotechnology, nanofiltration, and drinking and wastewater treatment—a vision for the future</p>
 				</blockquote>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+				<p>Sukanchan Palit, in Water Purification, 2017</p>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+				<p>Environmental sustainability, provision of clean drinking water and the road toward progress are the vision of tomorrow. Successful environmental sustainability and global water initiative are in the process of new scientific vision.
+           Provision of clean drinking water stands as a major prerogative of successful sustainable development in developed and developing countries.</p>
 
 			<hr>
 
@@ -116,7 +109,7 @@
             <img class="d-flex mr-3 rounded-circle" src="images/testi_01.png" alt="">
             <div class="media-body">
               <h5 class="mt-0">Franck</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              Excellent article; it was very informative. ESG is unquestionably the future of business management.
             </div>
           </div>
 
@@ -125,13 +118,13 @@
             <img class="d-flex mr-3 rounded-circle" src="images/testi_02.png" alt="">
             <div class="media-body">
               <h5 class="mt-0">Gustave</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+              Very interesting article, but I'm not sure how we could apply all of those elements in a business setting.
 
               <div class="media mt-4">
                 <img class="d-flex mr-3 rounded-circle" src="images/testi_01.png" alt="">
                 <div class="media-body">
                   <h5 class="mt-0">Franck</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                  It's very simple; all they have to do is follow the ESG governance factor.
                 </div>
               </div>
 
@@ -139,7 +132,7 @@
                 <img class="d-flex mr-3 rounded-circle" src="images/testi_03.png" alt="">
                 <div class="media-body">
                   <h5 class="mt-0">Elena</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                  We implemented ESG in my company, and it made a significant difference in our operations.
                 </div>
               </div>
 
@@ -172,26 +165,26 @@
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">Web Design</a>
+                      <a href="#">Seeds<div class="invisible">........</div></a>
                     </li>
                     <li>
-                      <a href="#">HTML</a>
+                      <a href="#">Plants<div class="invisible">........</div></a>
                     </li>
                     <li>
-                      <a href="#">Freebies</a>
+                      <a href="#">Compost</a>
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul class="list-unstyled mb-0">
                     <li>
-                      <a href="#">JavaScript</a>
+                      <a href="#">Straw<div class="invisible">........</div></a>
                     </li>
                     <li>
-                      <a href="#">CSS</a>
+                      <a href="#">Tools<div class="invisible">.........</div></a>
                     </li>
                     <li>
-                      <a href="#">Tutorials</a>
+                      <a href="#">Fertilizers</a>
                     </li>
                   </ul>
                 </div>
@@ -199,13 +192,6 @@
             </div>
           </div>
 
-          <!-- Side Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
-            <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-            </div>
-          </div>
 
         </div>
 
@@ -235,16 +221,16 @@
         <ul class="footer_ul2_amrc">
           <li>
             <a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-            <p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-            <p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
-          </li>
-          <li>
+            <p class="xlower">Find us on our Twitter page</p>
+         </li>
+         <li>
+            <a href="#"><i class="fab fa-facebook-f fleft padding-right xmargin"></i> </a>
+            <p class="xlower">Find us on our Facebook page</p>
+         </li>
+         <li>
             <a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-            <p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
-          </li>
+            <p class="xlower">Find us on our Instagram page</p>
+         </li>
         </ul>
         <!--footer_ul2_amrc ends here-->
       </div>
