--- a/about.html
+++ b/about.html
@@ -46,46 +46,14 @@
 			</div>
 		</div>
 	</nav>
-	  <header class="slider-main">
-		  <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-			  <ol class="carousel-indicators">
-				 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-			  </ol>
-			  <div class="carousel-inner" role="listbox">
-				 <!-- Slide One - Set the background image for this slide in the line below -->
-				 <div class="carousel-item active" style="background-image: url('images/slider-01.jpeg')">
-					<div class="carousel-caption d-none d-md-block">
-					   <h3>Welcome to Sustainability-Development-Project</h3>
-					   <p>A Great Theme For Garden Lawn Care</p>
-					</div>
-				 </div>
-				 <!-- Slide Two - Set the background image for this slide in the line below -->
-				 <div class="carousel-item" style="background-image: url('images/slider-02.jpeg')">
-					<div class="carousel-caption d-none d-md-block">
-					   <h3>Beautiful Garden</h3>
-					   <p>A Great Theme For Garden Lawn Care</p>
-					</div>
-				 </div>
-				 <!-- Slide Three - Set the background image for this slide in the line below -->
-				 <div class="carousel-item" style="background-image: url('images/slider-03.jpeg')">
-					<div class="carousel-caption d-none d-md-block">
-					   <h3>Welcome to Sustainability-Development-Project</h3>
-					   <p>A Great Theme For Garden Lawn Care</p>
-					</div>
-				 </div>
-			  </div>
-			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				  <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-				  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-				  <span class="sr-only">Next</span>
-			  </a>
-		  </div>
-	  </header>
+	  <!-- full Title -->
+  <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
+	<div class="container">
+		<!-- Page Heading/Breadcrumbs -->
+		<h1 class="mt-4 mb-3">Blog
+		</h1>
+	</div>
+</div>
     <!-- Page Content -->
     <div class="container">
 		<div class="breadcrumb-main">
@@ -253,16 +221,16 @@ impactful individuals</p>
 					<ul class="footer_ul2_amrc">
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
-							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-							<p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
+							<p class="xlower">Find us on our Twitter page</p>
+						 </li>
+						 <li>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right xmargin"></i> </a>
+							<p class="xlower">Find us on our Facebook page</p>
+						 </li>
+						 <li>
 							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-							<p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
-						</li>
+							<p class="xlower">Find us on our Instagram page</p>
+						 </li>
 					</ul>
 					<!--footer_ul2_amrc ends here-->
 				</div>
