--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   <div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
 	<div class="container">
 		<!-- Page Heading/Breadcrumbs -->
-		<h1 class="mt-4 mb-3">Blog
+		<h1 class="mt-4 mb-3">About
 		</h1>
 	</div>
 </div>
@@ -155,11 +155,12 @@ impactful individuals</p>
 				</div>
 				<div class="col-sm-3 mb-4">
 					<div class="card h-100 text-center">
-					  <img class="card-img-top" src="images/team_03.jpeg" alt="" />
+					  <img class="card-img-top" src="images/IMG_7409.jpeg" alt="" />
 					  <div class="card-body">
 						  <h4 class="card-title">Jordan</h4>
 						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
-						  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+						  <p class="card-text"> responsible for delivering the project. The individual leads and manages the project team, 
+						  with authority and responsibility from the project board, to run the project on a day-to-day basis</p>
 					  </div>
 					  <div class="card-footer">
 						  <ul>
